<resources>
    <string name="app_name">Indian Employment Card</string>
    <string name="slide1">Say Bye Bye to Paper Resume</string>
    <string name="slide2">Tune to Confirm Information</string>
    <string name="slide3">Say Hii to your Digital IEC</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome">Welcome</string>
    <string name="iec">Email or IEC number</string>
    <string name="password">Password</string>
    <string name="letsgo">Access</string>
    <string name="register">Register yourself</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="email">Email</string>
    <string name="contact1">Contact 1</string>
    <string name="contact2">Contact 2</string>
    <string name="contact3">Contact 3</string>
    <string name="adhaarno">Aadhar Number</string>
    <string name="personal">Personal Details</string>
    <string name="address">Address</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="line3">Line 3</string>
    <string name="pin">Pincode</string>
    <string name="state">State</string>
    <string name="country">India</string>
    <string name="fillnext">Fill Qualification Detail</string>
    <string name="areyou">Who you are</string>
    <string name="indi">Individual</string>
    <string name="edu">Education Sector</string>
    <string name="cor">Corporate Sector</string>
    <string name="board">Board</string>
    <string name="rollnumber">Roll Number</string>
    <string name="course">Course</string>
    <string name="status">Status</string>
    <string name="uploadpic">Upload Photograph</string>
    <string name="university">University</string>
    <string name="tekepic">Choose Picture</string>
    <string name="final_submit">Final  Submit</string>
    <string name="university_address">University Address</string>
    <string name="ugc_number">UGC Number</string>
    <string name="number_of_colleges">Number of Colleges</string>
    <string name="registration_number">Registration Number</string>
    <string name="vc_name">VC Name</string>
    <string name="get_into">Get Into IEC</string>
    <string name="university_name">University Name</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="number_of_branches">Number of Branches</string>
    <string name="pan_number">PAN Number</string>
    <string name="tin_number">Tin Number</string>
    <string name="ceo_name">CEO Name</string>
    <string name="company_email">Company Email</string>
    <string name="university_email">University Email</string>
    <string name="please_wait_until_we_send_your_password_on_your_registered_mail">Please wait until we send your password on your registered mail</string>
    <string name="thank_you">Thank You</string>
    <string name="pass1">Password</string>
    <string name="conform_password">Conform password</string>
    <string name="choose_password">Choose password</string>
    <string name="university_login">Educational Sector Login</string>
    <string name="corporate_login">Corporate Sector Login</string>
    <string name="login">Login</string>
</resources>