<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.iecindia.www.indianemploymentcard.IndividualSignUp">
    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_below="@+id/register"/>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg"
        android:id="@+id/name2">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/lastname"
            android:hint="@string/last_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name3"
        android:layout_below="@+id/name2">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/middlename"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="text"
            android:hint="@string/middle_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name4"
        android:layout_below="@+id/name3">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name4">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/adhaarNumber"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:inputType="number"
            android:hint="@string/adhaarno"/>
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:layout_below="@+id/name5"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addLine1"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:ems="9"
            android:inputType="text"
            android:hint="@string/line1" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addLine2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/text3"
            android:ems="9"
            android:inputType="text"
            android:hint="@string/line2" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name6"
        >
        <android.support.design.widget.TextInputEditText
            android:id="@+id/addLine3"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:hint="@string/line3"
            android:inputType="text"
            android:layout_toLeftOf="@+id/name6"
            android:layout_toStartOf="@+id/name7"
            android:ems="9"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name8"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/addpin"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_alignBottom="@+id/name6"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="9"
            android:inputType="number"
            android:hint="@string/pin" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name8">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/addState"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:hint="@string/state"
            android:inputType="text"
            android:layout_toLeftOf="@+id/name8"
            android:layout_toStartOf="@+id/name8"
            android:ems="9"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name10"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/addCountry"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_alignBottom="@+id/name10"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:ems="9"
            android:inputType="text"
            android:hint="@string/country" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@color/colorAccent"
        android:text="@string/fillnext"
        android:onClick="GoForQualification"
        android:textAllCaps="false" />
</RelativeLayout>
</ScrollView>