<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.iecindia.www.indianemploymentcard.LogOn">

    <TextView
        android:id="@+id/well"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:fontFamily="cursive"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/well"
        android:id="@+id/em">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EmailorIEC"
            android:hint="@string/iec"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/em"
        android:id="@+id/pas">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/letsgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pas"
        android:text="@string/letsgo"
        style="?android:attr/buttonBarButtonStyle"
        android:textAllCaps="false"
        android:onClick="letsgo"/>

    <TextView
        android:id="@+id/corporate_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/letsgo"
        android:fontFamily="cursive"
        android:text="@string/corporate_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:textSize="15sp"
        android:onClick="COR_LOGIN"/>

    <TextView
        android:id="@+id/university_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/corporate_login"
        android:fontFamily="cursive"
        android:text="@string/university_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:onClick="UNI_LOGIN"/>
</RelativeLayout>