<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.iecindia.www.indianemploymentcard.EducationSectorSignIn">

    <TextView
        android:id="@+id/well"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:fontFamily="cursive"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_below="@+id/well"
        android:id="@+id/em">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EduTrustEmail"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/em"
        android:id="@+id/pas">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EduTrustpassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/letsgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pas"
        android:text="@string/login"
        style="?android:attr/buttonBarButtonStyle"
        android:textAllCaps="false"
        android:onClick="EDULogin"/>

</RelativeLayout>