<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.iecindia.www.indianemploymentcard.UploadPicture">


    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/uploadpic"
        android:textSize="30sp"
        android:textColor="#000"
        android:textAlignment="center"/>
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:layout_below="@+id/text"
        app:srcCompat="@drawable/person_pic" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_finalsubmit"
        android:layout_alignStart="@+id/btn_finalsubmit"
        android:layout_below="@+id/imageView4"
        android:layout_marginTop="66dp"
        android:onClick="upload"
        android:text="@string/tekepic"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btn_finalsubmit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpload"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="FinalSubmit"
        android:text="@string/final_submit" />
</RelativeLayout>